force-app/main/default/objects/Outlet_Ring_Part_Number__c/Outlet_Ring_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Outlet Ring Part Number</label>
    <nameField>
        <label>Outlet Ring Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Ring Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>