force-app/main/default/objects/Outlet_Ring_Part_Number__c/fields/OutletRingPartNumber__c.field-meta.xml
<CustomField>
    <fullName>OutletRingPartNumber__c</fullName>
    <label>OutletRingPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>