force-app/main/default/objects/Outlet_Ring_Part_Number__c/fields/ProcMedia__c.field-meta.xml
<CustomField>
    <fullName>ProcMedia__c</fullName>
    <label>ProcMedia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>