force-app/main/default/objects/Outlet_Ring_Part_Number__c/fields/TefSealThickLL__c.field-meta.xml
<CustomField>
    <fullName>TefSealThickLL__c</fullName>
    <label>TefSealThickLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>