force-app/main/default/objects/Outlet_Ring_Part_Number__c/fields/Thickness__c.field-meta.xml
<CustomField>
    <fullName>Thickness__c</fullName>
    <label>Thickness</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>